@@ -1,5 +1,5 @@
 {
-  "timestamp" : "2022-06-17T08:07:33Z",
+  "timestamp" : "2022-06-17T16:06:17Z",
   "count_outdated" : 1563,
   "uniques_outdated" : 426,
   "count" : 1599,
@@ -7,7 +7,7 @@
   "clones" : [
     {
       "timestamp": "2022-06-03T00:00:00Z",
-      "count": 2,
+      "count": 1,
       "count_minmax": [ 1, 2 ],
       "uniques": 1,
       "uniques_minmax": [ 1, 1 ]
@@ -105,8 +105,8 @@
     },
     {
       "timestamp": "2022-06-17T00:00:00Z",
-      "count": 1,
-      "count_minmax": [ 1, 1 ],
+      "count": 2,
+      "count_minmax": [ 1, 2 ],
       "uniques": 1,
       "uniques_minmax": [ 1, 1 ]
     }
