@@ -4,7 +4,7 @@
   "clones": [
     {
       "timestamp": "2022-06-03T00:00:00Z",
-      "count": 2,
+      "count": 1,
       "uniques": 1
     },
     {
@@ -74,7 +74,7 @@
     },
     {
       "timestamp": "2022-06-17T00:00:00Z",
-      "count": 1,
+      "count": 2,
       "uniques": 1
     }
   ]
